--- a/packages/wallet-stack/locales/base/translation.json
+++ b/packages/wallet-stack/locales/base/translation.json
@@ -710,7 +710,8 @@
     "title": "Invite friends and get up to 12 cUSD",
     "body": "Once they connect their number and add funds to {{appName}}, you’ll both receive 0.50 cUSD."
   },
-  "inviteWithSMS": {
+  "inviteWithSMS": "Invite with SMS",
+  "inviteWithSmsMessage": {
     "title": "Invite with SMS",
     "shareMessage": "Hey! Sign up to {{appName}} wallet. I use it to grow my savings in USD and crypto, and you can set it up in seconds with just a phone number: {{shareUrl}}."
   },
